# dev-os

./: .gitignore  README.md  pyproject.toml
bootstrap/: checks.py  install.sh
config/: defaults.yaml  local.yaml.example
docs/: architecture.md  conventions.md  onboarding.md
python/devos/: cli.py
python/devos/config/: loader.py
python/devos/state/: store.py
python/devos/tickets/: registry.py  worktree.py
python/tests/: test_state_store.py
tests/integration/: test_ticket_lifecycle.py
wezterm/: devos_path.lua  keybindings.lua  launch_menu.lua  wezterm.lua  workspaces.lua
